--- a/button.html
+++ b/button.html
@@ -4,6 +4,6 @@
 <button>Clique-me</button>
 
 <script>
-   // var entrada = document.querySelector("input");
-    //var botao = document.querySelector("button");
+   var entrada = document.querySelector("input");
+   var botao = document.querySelector("button");
 </script>
