--- a/calcularIMC.html
+++ b/calcularIMC.html
@@ -1,29 +1,35 @@
 <meta charset="UTF-8">
 
-<HTML>
+<h1>Receitas do Yan</h1>
+
 <script>
+    var ingredientes = [];
 
-    function pulaLinha() {
-        document.write("<br>");
+    var quantidade = parseInt(prompt("Quantos ingredientes você vai adicionar?"));
+
+    var contador = 1;
+
+    while( contador <= quantidade) {
+
+        var ingrediente = prompt("Informe o ingrediente " + contador);
+
+        var existe = false;
+
+        for( var posicao = 0; posicao < ingredientes.length; posicao++) {
+
+            if( ingredientes[posicao] == ingrediente) {
+
+                existe = true;
+                break;
+            }
+        }
+
+        if( existe == false) {
+
+            ingredientes.push(ingrediente);
+            contador++;
+        }
     }
 
-    function mostra(frase) {
-        document.write(frase);
-        pulaLinha();
-    }
-
-    function calculaImc(altura, peso) {
-        var imc = peso / (altura * altura) +1;
-        mostra("O imc calculado é " + imc);
-    }
-
-var peso = 73;
-var altura = 1.71;
-
-var imc = peso / (altura * altura);
-
-mostra("O imc do Flávio é " + imc);
-
+    console.log(ingredientes);
 </script>
-
-</HTML>
