--- a/adivinhacao.html
+++ b/adivinhacao.html
@@ -1,39 +1,78 @@
 <meta charset="UTF-8">
 
+<input/>
+<button>Compare com o meu segredo</button>
+
 <script>
+	function sorteia() {
+	
+		returnMath.round(Math.random() * 10);
+	
+	}
+	
+	function sorteiaNumeros(quantidade) {
+	
+		var segredos = [];
+		
+		var numero = 1;
+		
+			while(numero <= quantidade) {
+			
+			var numeroAleatorio =sorteia();
+			var achou =false;
+			
+					if (numeroAleatorio !== 0) {
+							for(var posicao = 0; posicao < segredos.length; posicao++) {
+							
+									 if(segredos[posicao] == numeroAleatorio){
+									     achou =true;
+									     break;
+									 }
+							}
+									
+							 if (achou ==false) {
+									segredos.push(numeroAleatorio);
+									numero++;
+							 }
+					   }
+					}
+			
+			   return segredos;
+	
+      }
 
-    function pulaLinha() {
+		var segredos = sorteiaNumeros(3);
 
-        document.write("<br>");
-    }
+    console.log(segredos);
 
-    function mostra(frase) {
+    var input = document.querySelector("input");
+    input.focus();
 
-        document.write(frase);
-        pulaLinha();
-    }
+function verifica() {
 
-    var numeroPensado = Math.round(Math.random() * 10);
+var achou =false;
 
-    var tentativas = 1;
+for(var posicao = 0; posicao < segredos.length; posicao++) {
 
-    while(tentativas <= 3) {
+		if(input.value == segredos[posicao]) {
+		
+		    alert("Você ACERTOU!");
+		    achou =true;
+		    break;
+		}
+}
 
-        var chute = parseInt(prompt("Digite seu chute!"));
+	if(achou ==false) {
+	
+			alert("Você ERROU!");
+	}
 
-        if(chute == numeroPensado) {
+input.value = "";
+input.focus();
+}
 
-            mostra("Você ACERTOU!");
-            break;
+var button = document.querySelector("button");
 
-        } else {
-
-            mostra("Você ERROU!");
-        }
-
-        tentativas++;
-    }
-
-mostra("FIM! O numero pensado foi, " + numeroPensado);
+button.onclick = verifica;
 
 </script>
